--- a/AGV/nbproject/private/private_1.properties
+++ b/AGV/nbproject/private/private_1.properties
@@ -1,6 +1,6 @@
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\PhpProject1
+copy.src.target=C:\\xampp\\htdocs\\PhpProject5
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/AGV/
+url=http://localhost:80/AGV/
